# hid-lamprey

./: .gitignore  .gitmodules  Controller.cs  Controllers.cs  DInput.cs  Form1.Designer.cs  Form1.cs  FormDisplay.Designer.cs  FormDisplay.cs  FormDisplay.resx  FormSettings.Designer.cs  FormSettings.cs  Input.cs  InputCode.cs  InputCodes.cs  InputMapping.cs  InputMappings.cs  Inputs.DInput.cs  Inputs.NintendoSpy.cs  Inputs.XInput.cs  Inputs.cs  LICENSE.resources  Makefile  Program.cs  README  Resources.Designer.cs  Settings.cs  Shortcut.cs  Shortcuts.cs  Skin.cs  Skins.cs  XInput.cs  acinclude.m4  config-xml2.c  config.out.in  configure  configure.ac  controller.c  display-cli.c  display-gtk.c  (+33 more)
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
autoconf/: local_helpers.m4
dummy_designer/: dummy_designer.csproj
glade/: display.glade
include/: config-win.h  config-xml2.h  config.h  config.h.in  configure.h.in  controller.h  defaults.h  display-cli.h  display-gtk.h  display-win32-main.h  display-win32-settings.h  display-win32.h  display.h  evdev-codetable.h  evdev-keytable.h  evdev.h  input-codetable.h  input-defines.h  input-dinput.h  input-evdev.h  input-sdl2.h  input-xinput.h  input.h  lamprey-rc.h  lamprey.h  output-evdev.h  output-win32.h  settings-xml2.h  settings.h  shortcut_cb.h  skin.h  threads.h  version.h  xdo.h
legacy/: configure  configure.ac  controller.c  display-cli.c  display-win32-main.cpp  input-evdev.c  lamprey-installer.vdproj  output-evdev.c  output-win32.c  settings-xml2.c
lib/: libiconv-static.lib  libz-static.lib
(+29 files in other folders)
